--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Middleware for Webflow Integration",
   "main": "server.js",
+  "engines": {
+    "node": "20.18.1"
+  },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
