blink pay pre fetch URL

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ DB_PORT=5432
 DB_NAME=railway_dev
 DB_USER=postgres
 DB_PASSWORD=Fish5590@
+
+BLINK_CLIENT_ID=uJlIlsU0bLYc86N3zBpZZqpptgdlZ5sk
+BLINK_CLIENT_SECRET=9XisL8Q0_89MUTyyTP0_AzbenEQ5fF7-8vgemVxrxmpO_5EOR8B4nEpH2if_5XWp
