working blink pay

--- a/.env
+++ b/.env
@@ -20,3 +20,7 @@ DB_PASSWORD=Fish5590@
 
 BLINK_CLIENT_ID=uJlIlsU0bLYc86N3zBpZZqpptgdlZ5sk
 BLINK_CLIENT_SECRET=9XisL8Q0_89MUTyyTP0_AzbenEQ5fF7-8vgemVxrxmpO_5EOR8B4nEpH2if_5XWp
+
+BLINK_API_BASE_URL=https://sandbox.debit.blinkpay.co.nz/payments/v1
+BLINK_AUTH_URL=https://sandbox.debit.blinkpay.co.nz/oauth2/token
+BLINK_REDIRECT_URL=https://gold-buyers-christchurch.webflow.io/
