--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ STRIPE_SECRET_KEY=sk_test_51Qv6w4R50uNdu8Yp2nOjV2WWSmQgUgVklyvNhAjitxt9vQYRiMUUr
 STRIPE_LOCAL_FEE=0.027
 STRIPE_SUCCESS_URL=https://gold-buyers-christchurch.webflow.io/
 STRIPE_CANCEL_URL=https://gold-buyers-christchurch.webflow.io/
-
+STRIPE_ALIPAY_FEE=0.03
 
